refactoring related PR comments

--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -9,7 +9,7 @@
         <version>1.16.0</version>
     </parent>
 
-    <artifactId>${project.artefactId}</artifactId>
+    <artifactId>gaas-rest</artifactId>
     <name>gaas-rest</name>
     <description>Gaffer as a Service REST API</description>
 
@@ -21,7 +21,11 @@
         <io.jsonwebtoken.version>0.9.1</io.jsonwebtoken.version>
         <javax.xml.bind.version>2.3.0</javax.xml.bind.version>
         <fasterxml.jackson.version>2.11.2</fasterxml.jackson.version>
-        <project.artefactId>gaas-rest</project.artefactId>
+        <buildType>buildTar</buildType>
+        <credHelper></credHelper>
+        <userName>gchq</userName>
+        <maven.build.timestamp.format>yyyy-MM-dd.HH-mm-ss</maven.build.timestamp.format>
+        <imageName>${project.artifactId}-${project.version}-${maven.build.timestamp}</imageName>
     </properties>
 
     <dependencyManagement>
@@ -296,63 +300,50 @@
                 </plugins>
             </build>
         </profile>
-        <profile>
-            <id>docker-build</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <buildType>buildTar</buildType>
-                <credHelper></credHelper>
-                <userName>gchq</userName>
-                <maven.build.timestamp.format>yyyy-MM-dd.HH-mm-ss</maven.build.timestamp.format>
-                <imageName>${project.artefactId}-${project.version}-${maven.build.timestamp}</imageName>
-            </properties>
-            <build>
-            <plugins>
-                <plugin>
-                    <groupId>com.google.cloud.tools</groupId>
-                    <artifactId>jib-maven-plugin</artifactId>
-                    <version>3.0.0</version>
-                    <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>${buildType}</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <from>
-                            <image>adoptopenjdk/openjdk8:jdk8u172-b11</image>
-                        </from>
-                        <to>
-                            <image>${userName}/${imageName}</image>
-                            <credHelper>${credHelper}</credHelper>
-                        </to>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>3.0.0-M5</version>
-                    <configuration>
-                        <skipTests>true</skipTests>
-                        <rerunFailingTestsCount>3</rerunFailingTestsCount>
-                        <includes>
-                            <include>**/*IT.java</include>
-                        </includes>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>verify</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-        </plugins>
-            </build>
-        </profile>
     </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>${buildType}</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <from>
+                        <image>adoptopenjdk/openjdk8:jdk8u172-b11</image>
+                    </from>
+                    <to>
+                        <image>${userName}/${imageName}</image>
+                        <credHelper>${credHelper}</credHelper>
+                    </to>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                    <rerunFailingTestsCount>3</rerunFailingTestsCount>
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
