refactored prometheus from rest to common

--- a/gaffer-as-a-service/gaas-common/prometheus/openshift-prometheus.yaml
+++ b/gaffer-as-a-service/gaas-common/prometheus/openshift-prometheus.yaml
@@ -113,4 +113,4 @@ items:
           metrics_path: '/actuator/prometheus'
           scrape_interval: 5s
           static_configs:
-            - targets: ['localhost:8080']
+            - targets: ['prometheus-gaas-rest:8080']
