--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -159,6 +159,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.28</version>
+        </dependency>
     </dependencies>
     <profiles>
 
