--- a/gaffer-as-a-service/gaas-rest/src/main/resources/yaml/federated.yaml
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/yaml/federated.yaml
@@ -1,3 +1,5 @@
-gaffer.store.class: uk.gov.gchq.gaffer.federatedstore.FederatedStore
-gaffer.store.properties.class: uk.gov.gchq.gaffer.federatedstore.FederatedStoreProperties
-gaffer.serialiser.json.modules: uk.gov.gchq.gaffer.sketches.serialisation.json.SketchesJsonModules
+graph:
+  storeProperties:
+    gaffer.store.class: uk.gov.gchq.gaffer.federatedstore.FederatedStore
+    gaffer.store.properties.class: uk.gov.gchq.gaffer.federatedstore.FederatedStoreProperties
+    gaffer.serialiser.json.modules: uk.gov.gchq.gaffer.sketches.serialisation.json.SketchesJsonModules
