--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 
 jwt.secret=javainuse
 gaffer.namespace=kai-dev
-ingress.suffix=apps.k8s.example.com
+ingress.suffix=apps.ocp1.purplesky.cloud
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
 
