--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
@@ -19,3 +19,5 @@ gaffer.namespace=kai-dev
 ingress.suffix=apps.k8s.example.com
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
+
+management.endpoints.web.exposure.include=prometheus,metrics
