Graph config request overrides change

--- a/gaffer-as-a-service/gaas-rest/src/main/resources/config/mapStore.yaml
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/config/mapStore.yaml
@@ -2,3 +2,9 @@ graph:
   storeProperties:
     gaffer.store.job.tracker.enabled: true
     gaffer.cache.service.class: uk.gov.gchq.gaffer.cache.impl.HashMapCacheService
+
+ingress:
+  host: ""
+  pathPrefix:
+    ui: /ui
+    api: /rest
