--- a/gaffer-as-a-service/gaas-rest/src/main/resources/config/proxyNoContextRoot.yaml
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/config/proxyNoContextRoot.yaml
@@ -2,3 +2,9 @@ graph:
   storeProperties:
     gaffer.store.class: uk.gov.gchq.gaffer.proxystore.ProxyStore
     gaffer.host: http://my.graph.co.uk
+
+ingress:
+  host: ""
+  pathPrefix:
+    ui: /ui
+    api: /rest
