--- a/gaffer-as-a-service/gaas-rest/src/main/resources/config/federated.yaml
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/config/federated.yaml
@@ -3,3 +3,9 @@ graph:
     gaffer.store.class: uk.gov.gchq.gaffer.federatedstore.FederatedStore
     gaffer.store.properties.class: uk.gov.gchq.gaffer.federatedstore.FederatedStoreProperties
     gaffer.serialiser.json.modules: uk.gov.gchq.gaffer.sketches.serialisation.json.SketchesJsonModules
+
+ingress:
+  host: ""
+  pathPrefix:
+    ui: /ui
+    api: /rest
