--- a/gaffer-as-a-service/gaas-rest/src/main/resources/config/proxy.yaml
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/config/proxy.yaml
@@ -3,3 +3,9 @@ graph:
     gaffer.store.class: uk.gov.gchq.gaffer.proxystore.ProxyStore
     gaffer.host: http://my.graph.co.uk
     gaffer.context-root: /rest
+
+ingress:
+  host: ""
+  pathPrefix:
+    ui: /ui
+    api: /rest
