Gh-107-helm-value-overrides and Gh-108 (#113)
* add snakeyaml dependency, read yaml file and test

* fixing tests/reading of yaml

* integration test changes/fixes

* fix invalid type failing test

* changes to gaffer-builder / checkstyle

* Fix accumulo test

* fixed implementation so API does not need to know storeType

* refactoring

* add store types as list and test

* new implementation for getting resources

* checkstyle fixes

* refactored propertiesLoader

* refactoring loading resources

* checkstyle fixes

* Rename package name

* add test

* fixed test to check if exception being thrown

* amended test

* checkstyle/refactoring

* Refactoring

* Merged with up stream and fix the failing tests

* Fixed tests and fixed endpoint functionality

* fixed checkstyle

* refactoring and fix test

* Add code and test to filter federated config store based on the store properties store.class.name

* merge with gh-108-federated store congig branch

* refactoring

* refactoring

* refactoring check federated store class functionality

* Refactored GaaSGraphConfigsLoader

* GetGaaSGraphConfigsService and tests

* Started GaaSGraphConfigsLoader tests

* add test list config specs

* Fix failing test of the issues with Federated store config - based on the store properties

* refactoring and fix tests

* remove unused class and not add schema for federated store

* Refactoring

* Graph config request overrides change

* Amended /storeType responseBody

* Todos & added new ingress values

* test ingress api and ui

* remove unneeded code

* remove todo comments

* remove todo comments

* remove metrics changes

Co-authored-by: go159lab <Go159Lab@tutaNota.com>
Co-authored-by: macenturalxl1 <macenturalxl1@tutanota.com>

--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -80,6 +80,12 @@
             <version>${gaffer.version}</version>
         </dependency>
         <dependency>
+            <groupId>uk.gov.gchq.gaffer</groupId>
+            <artifactId>map-store</artifactId>
+            <version>${gaffer.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.kubernetes</groupId>
             <artifactId>client-java</artifactId>
             <version>${kubernetes.version}</version>
@@ -92,16 +98,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-core</artifactId>
-            <version>1.6.2</version>
-        </dependency>
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-registry-prometheus</artifactId>
-            <version>1.6.2</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -164,6 +160,11 @@
             <artifactId>junit-vintage-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.28</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
