--- a/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
+++ b/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
@@ -15,7 +15,7 @@
 replicaCount: 1
 image:
   #Set the repository value below to your own
-  repository: rocky341/may24rest
+  repository: dockerhub/repo
   pullPolicy: Always
   tag: latest
   containerPort: 8080
