--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -65,6 +65,12 @@
        </dependency>
         <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
+            <artifactId>gaffer-as-a-service-tools</artifactId>
+            <version>${gaffer.version}</version>
+            <scope>compile</scope>
+       </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.gaffer</groupId>
             <artifactId>proxy-store</artifactId>
             <version>${gaffer.version}</version>
             <scope>compile</scope>
