--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>graffer-ql</module>
         <module>operation-runner</module>
         <module>gaffer-as-a-service</module>
+        <module>gaffer-as-a-service-tools</module>
     </modules>
 
     <properties>
