--- a/gaffer-as-a-service/gaas-rest/src/main/resources/config/federatedopdec.yaml
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/config/federatedopdec.yaml
@@ -8,4 +8,11 @@ graph:
     "handler": {
       "class": "uk.gov.gchq.gaffer.store.operation.handler.generate.GenerateElementsHandler"
     }
+
+  } , {
+    "operation": "uk.gov.gchq.gaffer.operation.impl.generate.GenerateTest",
+    "handler": {
+      "class": "uk.gov.gchq.gaffer.store.operation.handler.generate.GenerateTestHandler"
+    },
+
   } ]
