--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -14,13 +14,9 @@
     <description>Gaffer as a Service REST API</description>
 
     <properties>
-        <junit.version>5.7.0</junit.version>
-        <springboot.version>2.4.2</springboot.version>
         <springfox.version>3.0.0</springfox.version>
         <gson.version>2.8.5</gson.version>
         <io.jsonwebtoken.version>0.9.1</io.jsonwebtoken.version>
-        <javax.xml.bind.version>2.3.0</javax.xml.bind.version>
-        <fasterxml.jackson.version>2.11.2</fasterxml.jackson.version>
         <buildType>buildTar</buildType>
         <credHelper></credHelper>
         <userName>gchq</userName>
@@ -53,28 +49,28 @@
     <dependencies>
         <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
+            <artifactId>gaas-common</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.gaffer</groupId>
+            <artifactId>gaffer-as-a-service-tools</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.gaffer</groupId>
             <artifactId>sketches-library</artifactId>
             <version>${gaffer.version}</version>
             <scope>compile</scope>
         </dependency>
-       <dependency>
-            <groupId>uk.gov.gchq.gaffer</groupId>
-            <artifactId>gaas-common</artifactId>
-            <version>1.16.0</version>
-            <scope>compile</scope>
-       </dependency>
         <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
             <artifactId>common-rest</artifactId>
             <version>${gaffer.version}</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>uk.gov.gchq.gaffer</groupId>
-            <artifactId>gaffer-as-a-service-tools</artifactId>
-            <version>1.16.0</version>
-            <scope>compile</scope>
-       </dependency>
         <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
             <artifactId>proxy-store</artifactId>
@@ -156,6 +152,7 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
+            <version>${springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -208,8 +205,8 @@
             <artifactId>commons-text</artifactId>
         </dependency>
     </dependencies>
-    <profiles>
 
+    <profiles>
         <profile>
             <id>test</id>
             <activation>
