--- a/gaffer-as-a-service/gaffer-controller/pom.xml
+++ b/gaffer-as-a-service/gaffer-controller/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-as-a-service</artifactId>
-        <version>1.17.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>gaffer-controller</artifactId>
