--- a/gaffer-as-a-service/pom.xml
+++ b/gaffer-as-a-service/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-experimental</artifactId>
-        <version>1.17.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>gaffer-as-a-service</artifactId>
