--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>gaffer-experimental</artifactId>
-    <version>1.17.1</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -37,6 +37,7 @@
     </modules>
 
     <properties>
+        <revision>1.17.1</revision>
         <gaffer.version>1.17.1</gaffer.version>
         <scm.url>
             https://github.com/gchq/gaffer-experimental
