--- a/tinkerpop/pom.xml
+++ b/tinkerpop/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-experimental</artifactId>
-        <version>1.17.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>tinkerpop</artifactId>
