--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -29,5 +29,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: returntocorp/semgrep-action@v1
       with:
-        config: p/r2c
+        config:
+            p/r2c
+            p/owasp-top-ten
         auditOn: push
