--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,10 +1,6 @@
 name: semgrep-action
 
-on:
-  pull_request: {}
-  push:
-    branches:
-      - master
+on: [pull_request, push]
 
 jobs:
   run-maven-build:
