Gh 131 pom updates (#132)
* update version

* updated poms to fix checkstyle not found issue

* parameterising version

Co-authored-by: K-itKat20 <LaurelKatie@tutanota.com>

--- a/gaffer-as-a-service/gaffer-controller/pom.xml
+++ b/gaffer-as-a-service/gaffer-controller/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-as-a-service</artifactId>
-        <version>1.16.0</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>gaffer-controller</artifactId>
