--- a/gaffer-as-a-service/gaas-common/pom.xml
+++ b/gaffer-as-a-service/gaas-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-as-a-service</artifactId>
-        <version>1.16.0</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>gaas-common</artifactId>
     <name>gaas-common</name>
