--- a/gaffer-as-a-service/pom.xml
+++ b/gaffer-as-a-service/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-experimental</artifactId>
-        <version>1.16.0</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>gaffer-as-a-service</artifactId>
@@ -35,7 +35,7 @@
     </modules>
 
     <properties>
-        <gaffer.version>1.16.0</gaffer.version>
+        <gaffer.version>1.17.1</gaffer.version>
         <kubernetes.version>11.0.0</kubernetes.version>
         <slf4j.api.version>1.7.25</slf4j.api.version>
         <junit.version>5.7.0</junit.version>
