--- a/graffer-ql/pom.xml
+++ b/graffer-ql/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-experimental</artifactId>
-        <version>1.16.0</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>graffer-ql</artifactId>
