--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -31,4 +31,10 @@ jobs:
             p/r2c-ci
             p/xss
             p/ci
+        generateSarif: "1"
+      - name: Upload SARIF file for GitHub Advanced Security Dashboard
+           uses: github/codeql-action/upload-sarif@v1
+           with:
+           sarif_file: semgrep.sarif
+         if: always()
         auditOn: push
