--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -32,8 +32,7 @@ jobs:
             p/xss
             p/ci
         auditOn: push
-        generateSarif: "1"
-        SEMGREP_TIMEOUT: 300
+        generateSarif: 1
       - name: Upload SARIF file for GitHub Advanced Security Dashboard
           uses: github/codeql-action/upload-sarif@v1
           with:
