--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -32,8 +32,4 @@ jobs:
             p/xss
             p/ci
         auditOn: push
-      - name: Upload SARIF file for GitHub Advanced Security Dashboard
-          uses: github/codeql-action/upload-sarif@v1
-          with:
-          sarif_file: semgrep.sarif
-          if: always()
+        generateSarif: "1"
