--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -33,8 +33,8 @@ jobs:
             p/ci
         auditOn: push
         generateSarif: "1"
-  - name: GitHub Advanced Security Dashboard
-     uses: github/codeql-action/upload-sarif@v1
-     with:
-     sarif_file: semgrep.sarif
-     if: always()
+       - name: Upload SARIF file for GitHub Advanced Security Dashboard
+         uses: github/codeql-action/upload-sarif@v1
+         with:
+         sarif_file: semgrep.sarif
+       if: always()
