--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -33,6 +33,7 @@ jobs:
             p/ci
         auditOn: push
         generateSarif: "1"
-    - uses: github/codeql-action/upload-sarif@v1
+    - name: Github Security Dashboard
+      uses: github/codeql-action/upload-sarif@v1
       with:
        sarif_file: semgrep.sarif
