--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -36,6 +36,10 @@ jobs:
             p/nodejsscan
         auditOn: push
         generateSarif: "1"
+  github-dashborad:
+    name: Security Dashboard
+    runs-on: ubuntu-latest
+    steps:
     - name: Github Security Dashboard
       uses: github/codeql-action/upload-sarif@v1
       with:
