semgrep job setup

--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -38,6 +38,7 @@ jobs:
         generateSarif: "1"
   github-dashborad:
     name: Security Dashboard
+    needs: Scan
     runs-on: ubuntu-latest
     steps:
     - name: Github Security Dashboard
