--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -45,6 +45,7 @@
     "react-testing-library": "latest",
     "react-toastify": "^6.1.0",
     "reaviz": "^10.1.0",
+    "sanitize-html": "^2.4.0",
     "statuses": "^2.0.1",
     "validator": "^13.6.0"
   },
@@ -59,6 +60,7 @@
     "@types/jest": "26.0.15",
     "@types/morgan": "^1.9.2",
     "@types/react-router-dom": "^5.1.6",
+    "@types/sanitize-html": "^2.3.2",
     "@types/statuses": "^2.0.0",
     "@types/supertest": "^2.0.10",
     "@types/webpack": "^4.41.25",
