--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -32,7 +32,8 @@
     "d3-array": "^3.1.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^1.3.1",
+    "http-proxy-middleware": "^1.0.6",
+    "immer": "^9.0.6",
     "json": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "material-ui-dropzone": "^3.5.0",
@@ -50,6 +51,7 @@
     "regenerator-runtime": "^0.13.9",
     "sanitize-html": "^2.5.2",
     "statuses": "^2.0.1",
+    "use-immer": "^0.6.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
