--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -31,6 +31,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
+    "immer": "^9.0.6",
     "json": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "material-ui-dropzone": "^3.5.0",
@@ -47,6 +48,7 @@
     "reaviz": "^10.1.0",
     "sanitize-html": "^2.4.0",
     "statuses": "^2.0.1",
+    "use-immer": "^0.6.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
