service account upgrade

--- a/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
+++ b/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
@@ -28,6 +28,6 @@ service:
 # Set serviceAccount.create to true if User deploying has assign
 # ClusterRoleBinding privileges to enable cluster namespaces endpoint
 serviceAccount:
-  create: false
+  create: true
 
 namespace: kai-dev
