Added create verb to SA permissions

--- a/gaffer-as-a-service/gaas-rest/deploy/helm/templates/role-binding.yaml
+++ b/gaffer-as-a-service/gaas-rest/deploy/helm/templates/role-binding.yaml
@@ -19,7 +19,7 @@ metadata:
 rules:
   - apiGroups: ["gchq.gov.uk"]
     resources: ["gaffers"]
-    verbs: ["get", "list", "view","edit"]
+    verbs: ["get", "list", "view","edit", "create"]
 ---
 
 kind: RoleBinding
