--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -20,12 +20,13 @@
     "@material-ui/styles": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/user-event": "^12.5.0",
+    "@types/d3-array": "^3.0.2",
     "@types/node": "^14.14.10",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/validator": "^13.6.3",
     "amazon-cognito-identity-js": "^4.5.5",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
