--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "d3-array": "^3.1.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
