--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -21,8 +21,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^12.5.0",
     "@types/d3-array": "^3.0.2",
-    "@types/node": "^14.17.32",
-    "@types/react": "^16.14.20",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
     "@types/react-dom": "^16.9.14",
     "@types/validator": "^13.6.5",
     "amazon-cognito-identity-js": "^4.6.3",
@@ -59,7 +59,7 @@
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.13",
-    "@types/jest": "26.0.15",
+    "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.3",
     "@types/react-router-dom": "^5.3.2",
     "@types/sanitize-html": "^2.5.0",
