--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -20,7 +20,6 @@
     "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^12.5.0",
-    "@types/d3-array": "^3.0.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^16.9.14",
@@ -28,6 +27,7 @@
     "amazon-cognito-identity-js": "^4.6.3",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
+    "core-js": "^3.19.0",
     "cors": "^2.8.5",
     "d3-array": "^3.1.1",
     "env-cmd": "^10.1.0",
@@ -47,6 +47,7 @@
     "react-testing-library": "latest",
     "react-toastify": "^6.1.0",
     "reaviz": "^10.4.4",
+    "regenerator-runtime": "^0.13.9",
     "sanitize-html": "^2.5.2",
     "statuses": "^2.0.1",
     "validator": "^13.6.0"
@@ -56,12 +57,14 @@
     "@babel/preset-react": "^7.14.5",
     "@testing-library/react": "^11.2.7",
     "@types/body-parser": "^1.19.1",
+    "@types/core-js": "^2.5.5",
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.3",
     "@types/react-router-dom": "^5.3.2",
+    "@types/regenerator-runtime": "^0.13.1",
     "@types/sanitize-html": "^2.5.0",
     "@types/statuses": "^2.0.0",
     "@types/supertest": "^2.0.11",
@@ -70,7 +73,10 @@
     "@typescript-eslint/parser": "^4.33.0",
     "accessibility-checker": "^3.1.11",
     "axios-mock-adapter": "^1.20.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.3.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "concurrently": "^5.3.0",
     "enzyme": "^3.11.0",
