Gh 149 service account upgrade (#151)
* service account upgrade

* Added create verb to SA permissions

* fix test

* import fixes

* update to double quote

* updated jest config

* updated jest config

* updated npm dependencies

* Added d3 array

* updated versions of dependencies

* updates

* update jest to not transform d3-array

* d3

* jest config

* updated babel

* change regex

* Fixed pipeline issue

* fixes

* PR fixes

--- a/gaffer-as-a-service/gaas-rest/deploy/helm/templates/role-binding.yaml
+++ b/gaffer-as-a-service/gaas-rest/deploy/helm/templates/role-binding.yaml
@@ -12,17 +12,26 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{ if .Values.serviceAccount.create }}
-kind: ClusterRoleBinding
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "helm.fullname" . }}-clusterrolebinding
+  name: gaffer-role
+rules:
+  - apiGroups: ["gchq.gov.uk"]
+    resources: ["gaffers"]
+    verbs: ["get", "list", "view","edit", "create"]
+---
+
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: gaffer-role
 subjects:
   - kind: ServiceAccount
     name: {{ include "helm.fullname" . }}-service-account
     namespace: {{ .Values.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-reader
-{{ end }}
+  kind: Role
+  name: gaffer-role
+
