--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -63,15 +63,21 @@
             <version>${gaffer.version}</version>
             <scope>compile</scope>
        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>uk.gov.gchq.gaffer</groupId>-->
+<!--            <artifactId>gaffer-as-a-service-tools</artifactId>-->
+<!--            <version>${gaffer.version}</version>-->
+<!--            <scope>compile</scope>-->
+<!--       </dependency>-->
         <dependency>
-            <groupId>uk.gov.gchq.gaffer</groupId>
-            <artifactId>gaffer-as-a-service-tools</artifactId>
-            <version>${gaffer.version}</version>
-            <scope>compile</scope>
+          <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+            <version>5.5.3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
