--- a/gaffer-as-a-service/gaas-rest/src/test/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/test/resources/application.properties
@@ -20,3 +20,5 @@ ingress.suffix=apps.my.kubernetes.cluster
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
 management.endpoints.web.exposure.include=env
+spring.security.oauth2.resourceserver.jwt.issuer-uri= example.idp.com
+cognito.enabled = false
