Tests no longer need valid cognito idp to work

--- a/gaffer-as-a-service/gaas-rest/src/test/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/test/resources/application.properties
@@ -20,5 +20,5 @@ ingress.suffix=apps.my.kubernetes.cluster
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
 management.endpoints.web.exposure.include=env
-spring.security.oauth2.resourceserver.jwt.issuer-uri= example.idp.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri= https://cognito-idp.{YOUR_REGION}.amazonaws.com/{YOUR_USER_POOL}
 cognito.enabled = false
