Fix corss origin issues

--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 #
 
 jwt.secret=javainuse
-gaffer.namespace=kai-dev
+gaffer.namespace=korat-dev
 ingress.suffix=apps.k8s.example.com
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
