Added spring profiles for cognito or jwt

--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application-cognito.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application-cognito.properties
@@ -14,11 +14,4 @@
 # limitations under the License.
 #
 
-gaffer.namespace=kai-dev
-ingress.suffix=apps.k8s.example.com
-management.endpoints.web.exposure.include=prometheus,metrics
-spring.profiles.active=cognito
-cognito.enabled = true
-admin.username=javainuse
-admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
-jwt.secret=javainuse
+spring.security.oauth2.resourceserver.jwt.issuer-uri= https://cognito-idp.{YOUR_REGION}.amazonaws.com/{YOUR_USERPOOL}
