removed cognito.enabled from main application properties

--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application-cognito.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application-cognito.properties
@@ -15,3 +15,4 @@
 #
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri= https://cognito-idp.{YOUR_REGION}.amazonaws.com/{YOUR_USERPOOL}
+cognito.enabled = true
