--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -31,6 +31,8 @@
     "cors": "^2.8.5",
     "d3-array": "^3.1.1",
     "env-cmd": "^10.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.3.1",
     "json": "^10.0.0",
