--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -84,6 +84,8 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.2",
     "eslint-config-react-app": "^6.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-flowtype": "^5.10.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -97,6 +99,7 @@
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
+    "prettier": "2.4.1",
     "typescript": "^4.4.4"
   },
   "eslintConfig": {
