--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -11,7 +11,7 @@
     "watch": "jest --watchAll",
     "deploy": "aws s3 sync build/ s3://kai-ui",
     "eject": "react-scripts eject",
-    "lint": "eslint './src/**/*.{ts,tsx}' --fix"
+    "lint": "eslint './src/**/*.{ts,tsx, js, jsx}' --fix"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
