--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.3.1",
+    "immer": "^9.0.6",
     "json": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "material-ui-dropzone": "^3.5.0",
@@ -52,6 +53,7 @@
     "regenerator-runtime": "^0.13.9",
     "sanitize-html": "^2.5.2",
     "statuses": "^2.0.1",
+    "use-immer": "^0.6.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
@@ -118,4 +120,3 @@
     ]
   }
 }
-
